# llm_workouts

./: README.md  main.py  pyproject.toml  requirements.txt  workout.py
src/llm_workouts/: main.py
tests/: test_main.py
