[tool.poetry]
name = "llm-workouts"
version = "0.1.0"
description = "llm based journaling and personalization of workouts"
authors = ["Lucas Clarte <clarte.lucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.10.3"
ollama = "^0.4.4"
langchain-ollama = "^0.2.1"
langchain = "^0.3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
